--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   height: 50%;
   margin: auto;
   margin-top: 3%;
+  margin-bottom: 2%;
   border-radius: 10px;
   padding: 50px;
   font-size: 20px;
